--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "midtrans/midtrans-php": "^2.6",
+        "stripe/stripe-php": "^16.3",
         "surfsidemedia/shoppingcart": "^1.0"
     },
     "require-dev": {
